# pychemovality

./: .gitignore  README.md  pyproject.toml
docs/: fortran_compilation_instructions.md
pychemovality/: __main__.py  classes.py  constants.py  fileoperations.py  ovalitycalculations.py
pychemovality/fortran/: GEPOL93_modified.FOR  gepol93_with_args.out  gepol93_with_args_linux.out  gepol93_with_args_osx.out
pychemovality/pychemovality/output/: methanol.xyzr
vandan-revanur/pychemovality/: README.md
vandan-revanur/pychemovality/ghrs-data/: views_clones_aggregate.csv
vandan-revanur/pychemovality/ghrs-data/snapshots/: 2023-05-28_111436_top_paths_snapshot.csv  2023-05-28_111436_views_clones_series_fragment.csv  2023-05-28_231506_views_clones_series_fragment.csv  2023-05-29_231457_top_paths_snapshot.csv  2023-05-29_231457_views_clones_series_fragment.csv  2023-05-30_231511_views_clones_series_fragment.csv  2023-05-31_231511_top_paths_snapshot.csv  2023-05-31_231511_views_clones_series_fragment.csv  2023-06-01_231538_top_paths_snapshot.csv  2023-06-01_231538_views_clones_series_fragment.csv  2023-06-02_231624_top_paths_snapshot.csv  2023-06-02_231624_views_clones_series_fragment.csv  2023-06-03_231443_top_paths_snapshot.csv  2023-06-03_231443_views_clones_series_fragment.csv  2023-06-04_231544_views_clones_series_fragment.csv  2023-06-05_231537_top_paths_snapshot.csv  2023-06-05_231537_views_clones_series_fragment.csv  2023-06-06_231510_top_paths_snapshot.csv  (+757 more)
vandan-revanur/pychemovality/latest-report/: report.html  report.md  report_for_pdf.html
